--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "core-js": "^3.8.3",
     "oh-vue-icons": "^1.0.0-rc3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.2.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
