--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "axios": "^1.6.5",
     "core-js": "^3.8.3",
     "oh-vue-icons": "^1.0.0-rc3",
     "vue": "^3.2.13",
